--- a/packages/air_quality/sensor_unified_air_quality_sensor_office.yaml
+++ b/packages/air_quality/sensor_unified_air_quality_sensor_office.yaml
@@ -3,7 +3,7 @@ template:
       - name: "Qualité de l'air (Bureau)"
         unique_id: "office_air_quality"
         state_class: measurement
-        # State = numeric IAQ score (1=Excellent … 6=Hazardous)
+        # State = numeric IAQ score (1=Excellente … 6=Dangereuse)
         state: >-
           {% set co2 = states('sensor.indoor_air_quality_monitor_salon_dioxyde_de_carbone') | int(0) %}
           {% set pm1  = states('sensor.indoor_air_quality_monitor_salon_pm1') | float(0) %}
@@ -12,7 +12,7 @@ template:
           {% set voc  = states('sensor.indoor_air_quality_monitor_salon_voc_index') | int(0) %}
           {% set nox  = states('sensor.indoor_air_quality_monitor_salon_nox_index') | int(0) %}
 
-          {# Scores: 1=Excellent, 2=Good, 3=Moderate, 4=Poor, 5=Very Poor, 6=Hazardous #}
+          {# Scores: 1=Excellente, 2=Bonne, 3=Moyenne, 4=Mauvaise, 5=Très mauvaise, 6=Dangereuse #}
           {% set co2_score   = 6 if co2 > 2500 else 5 if co2 > 1500 else 4 if co2 > 1000 else 3 if co2 > 750 else 2 if co2 > 600 else 1 %}
           {% set pm1_score   = 6 if pm1 > 250 else 5 if pm1 > 150 else 4 if pm1 > 55 else 3 if pm1 > 35 else 2 if pm1 > 12 else 1 %}
           {% set pm25_score  = 6 if pm25 > 250 else 5 if pm25 > 150 else 4 if pm25 > 55 else 3 if pm25 > 35 else 2 if pm25 > 12 else 1 %}
@@ -25,7 +25,7 @@ template:
 
         attributes:
           category: >-
-            {% set categories = {1:'Excellent', 2:'Good', 3:'Moderate', 4:'Poor', 5:'Very Poor', 6:'Hazardous'} %}
+            {% set categories = {1:'Excellentee', 2:'Bonne', 3:'Moyenne', 4:'Mauvaise', 5:'Très Mauvaise', 6:'Dangereuse'} %}
             {{ categories[ this.state | int(0) ] }}
           driven_by: >-
             {% set co2 = states('sensor.indoor_air_quality_monitor_salon_dioxyde_de_carbone') | int(0) %}
@@ -53,54 +53,44 @@ template:
             {% set worst = pairs | sort(attribute=1, reverse=True) | first %}
             {{ worst[0] ~ ' — ' ~ worst[2] ~ ( ' ' ~ worst[3] if worst[3] != '' else '' ) }}
 
-          # Full breakdown (handy in the more-info panel)
-          co2: "{{ states('sensor.indoor_air_quality_monitor_salon_dioxyde_de_carbone') | int(0) }} ppm"
           co2_category: >-
             {% set v = states('sensor.indoor_air_quality_monitor_salon_dioxyde_de_carbone') | int(0) %}
             {% set s = 6 if v > 2500 else 5 if v > 1500 else 4 if v > 1000 else 3 if v > 750 else 2 if v > 600 else 1 %}
-            {% set categories = {1:'Excellent', 2:'Good', 3:'Moderate', 4:'Poor', 5:'Very Poor', 6:'Hazardous'} %}
+            {% set categories = {1:'Excellente', 2:'Bonne', 3:'Moyenne', 4:'Mauvaise', 5:'Très mauvaise', 6:'Dangereuse'} %}
             {{ categories[s] }}
 
-          pm2_5: "{{ (states('sensor.indoor_air_quality_monitor_salon_pm2_5') | float(0)) | round(1) }} µg/m³"
           pm2_5_category: >-
             {% set v = states('sensor.indoor_air_quality_monitor_salon_pm2_5') | float(0) %}
             {% set s = 6 if v > 250 else 5 if v > 150 else 4 if v > 55 else 3 if v > 35 else 2 if v > 12 else 1 %}
-            {% set categories = {1:'Excellent', 2:'Good', 3:'Moderate', 4:'Poor', 5:'Very Poor', 6:'Hazardous'} %}
+            {% set categories = {1:'Excellente', 2:'Bonne', 3:'Moyenne', 4:'Mauvaise', 5:'Très mauvaise', 6:'Dangereuse'} %}
             {{ categories[s] }}
 
-          pm10: "{{ (states('sensor.indoor_air_quality_monitor_salon_pm10') | float(0)) | round(0) }} µg/m³"
           pm10_category: >-
             {% set v = states('sensor.indoor_air_quality_monitor_salon_pm10') | float(0) %}
             {% set s = 6 if v > 424 else 5 if v > 354 else 4 if v > 254 else 3 if v > 154 else 2 if v > 54 else 1 %}
-            {% set categories = {1:'Excellent', 2:'Good', 3:'Moderate', 4:'Poor', 5:'Very Poor', 6:'Hazardous'} %}
+            {% set categories = {1:'Excellente', 2:'Bonne', 3:'Moyenne', 4:'Mauvaise', 5:'Très mauvaise', 6:'Dangereuse'} %}
             {{ categories[s] }}
 
-          pm1_0: "{{ (states('sensor.indoor_air_quality_monitor_salon_pm1') | float(0)) | round(1) }} µg/m³"
           pm1_0_category: >-
             {% set v = states('sensor.indoor_air_quality_monitor_salon_pm1') | float(0) %}
             {% set s = 6 if v > 250 else 5 if v > 150 else 4 if v > 55 else 3 if v > 35 else 2 if v > 12 else 1 %}
-            {% set categories = {1:'Excellent', 2:'Good', 3:'Moderate', 4:'Poor', 5:'Very Poor', 6:'Hazardous'} %}
+            {% set categories = {1:'Excellente', 2:'Bonne', 3:'Moyenne', 4:'Mauvaise', 5:'Très mauvaise', 6:'Dangereuse'} %}
             {{ categories[s] }}
 
-          voc_index: "{{ states('sensor.indoor_air_quality_monitor_salon_voc_index') | int(0) }}"
           voc_category: >-
             {% set v = states('sensor.indoor_air_quality_monitor_salon_voc_index') | int(0) %}
             {% set s = 6 if v >= 400 else 5 if v >= 350 else 4 if v >= 250 else 3 if v >= 200 else 2 if v >= 100 else 1 %}
-            {% set categories = {1:'Excellent', 2:'Good', 3:'Moderate', 4:'Poor', 5:'Very Poor', 6:'Hazardous'} %}
+            {% set categories = {1:'Excellente', 2:'Bonne', 3:'Moyenne', 4:'Mauvaise', 5:'Très mauvaise', 6:'Dangereuse'} %}
             {{ categories[s] }}
 
-          nox_index: "{{ states('sensor.indoor_air_quality_monitor_salon_nox_index') | int(0) }}"
           nox_category: >-
             {% set v = states('sensor.indoor_air_quality_monitor_salon_nox_index') | int(0) %}
             {% set s = 6 if v >= 400 else 5 if v >= 350 else 4 if v >= 300 else 3 if v >= 100 else 2 if v >= 50 else 1 %}
-            {% set categories = {1:'Excellent', 2:'Good', 3:'Moderate', 4:'Poor', 5:'Very Poor', 6:'Hazardous'} %}
+            {% set categories = {1:'Excellente', 2:'Bonne', 3:'Moyenne', 4:'Mauvaise', 5:'Très mauvaise', 6:'Dangereuse'} %}
             {{ categories[s] }}
 
         icon: >-
           {% set s = this.state | int(0) %}
-          {% if s <= 2 %} mdi:weather-sunny
-          {% elif s == 3 %} mdi:weather-partly-cloudy
-          {% elif s == 4 %} mdi:weather-cloudy
-          {% elif s == 5 %} mdi:smog
+          {% if s <= 4 %} mdi:blur
           {% else %} mdi:biohazard
           {% endif %}
